<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_on_sale_items"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_menu_on_sale_items_list" />
        <item
            android:id="@+id/nav_own_items"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_menu_own_items_list" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_menu_profile" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@android:drawable/star_big_off"
            android:title="Wishlist" />
    </group>
</menu>
