<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/editProfileImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profilepictureContentDescrition"
        android:scaleType="fitCenter"
        android:tag="default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/profile_pic" />

    <ImageButton
        android:id="@+id/editProfileImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/profilepictureContentDescrition"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editProfileFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/fullNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/nfont_size"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editProfileImageButton" />

    <EditText
        android:id="@+id/editProfileNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nicknameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editProfileFullName" />

    <EditText
        android:id="@+id/editProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/emailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editProfileNickname" />

    <EditText
        android:id="@+id/editProfileLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/locationHint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/font_size"
        app:layout_constraintEnd_toStartOf="@+id/profileMapButton"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editProfileEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="@+id/editProfileLocation"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/editProfileLocation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>